# working-code

hand-tracking-playground/artificial-data-generator/: .gitignore  .gitmodules  CMakeLists.txt  README.md  bleh.java  generate_proto.sh  might-be-important.cpp  pose_diversity.code-workspace  update.py  update.sh
hand-tracking-playground/artificial-data-generator/proto/: artificialdata.proto  artificialdata_loader.proto
hand-tracking-playground/artificial-data-generator/py_generator/: artificialdata_pb2.py  artificialdata_pb2.pyi  artificialdata_pb2_grpc.py  blender_main.py  header.py  loadgrapher.py  loadwatcher.py  mlib.py  readcsv_fingerpose.py  readcsv_wristpose.py  sanitycheck_num_sequences.py
hand-tracking-playground/artificial-data-generator/py_training/: ArtificialData.py  KeyNet.py  a_aug_config.py  a_geometry.py  aaq.py  artificialdata_loader_pb2.py  artificialdata_loader_pb2.pyi  artificialdata_loader_pb2_grpc.py  heatmap_1d.py  kpest_header.py  kpest_trainer.py  maker_of_augmentations.py  pybind_test.py  settings.py  visualizer.py
hand-tracking-playground/artificial-data-generator/src/: CMakeLists.txt  kine_common.hpp  make_hand_proportions.cpp  make_hand_proportions.hpp  pose_csv.hpp  pose_diversity_hand_maker.cpp  pose_diversity_hand_maker.h  pose_diversity_test.cpp  randoviz.hpp  server_test.cpp  u_uniform_distribution.cpp  u_uniform_distribution.h
hand-tracking-playground/artificial-data-generator/src/dataloader/: dataloader_common.hpp  dataloader_pybind.cpp  dataloader_server_test.cpp  distort_image.cpp  get_finger_curls.cpp
hand-tracking-playground/artificial-data-generator/src/kine_lm/: lm_defines.hpp  lm_interface.hpp  lm_main.cpp  lm_optimizer_params_packer.inl
hand-tracking-playground/artificial-data-generator/src/pose_recorders/: CMakeLists.txt  wrist_elbow_pose.cpp
hand-tracking-playground/hand-tracking-dataset-player/: CMakeLists.txt
hand-tracking-playground/hand-tracking-dataset-player/targets/: CMakeLists.txt
hand-tracking-playground/hand-tracking-dataset-player/targets/ht_dataset_player/: 2d_viz.cpp  CMakeLists.txt  descent_main.cpp  randoviz.hpp  some_defs.hpp
hand-tracking-playground/hmdhandrects-annotator/: .clang-format  .gitmodules  CMakeLists.txt  README.md
hand-tracking-playground/hmdhandrects-annotator/py/: apply_redactions.py
hand-tracking-playground/hmdhandrects-annotator/src/: 2d_viz.cpp  2d_viz.hpp  CMakeLists.txt  clitest.cpp  human_annotator_main.cpp  randoviz.cpp  redactor.cpp
hand-tracking-playground/hmdhandrects-annotator/src/machine_annotator/: machine_annotator_main.cpp  nms.hpp  terrifying_euroc_stuff.hpp
hand-tracking-playground/image-distorter/: .gitignore  CMakeLists.txt  notes
hand-tracking-playground/image-distorter/notebooks/: download_exrs.ipynb
hand-tracking-playground/image-distorter/py/: add_index_vignette.py  circletest.py  header.py  magic.py  magic2.py  mlib.py  offline_validity_check.py  readcsv_fingerpose.py  readcsv_wristpose.py  test_center_camera.py  this_is_what_we_have_to_do  uhhhh.py
hand-tracking-playground/image-distorter/src/: bad_csv.h  blendernexus.cpp  blendernexus.hpp  camera_calibration_rightinleft.hpp  distort_image.cpp  distort_image.hpp  dumbplayer.cpp  generate_many.cpp  generate_many_multithreaded.cpp  main.cpp  u_uniform_distribution.cpp  u_uniform_distribution.h
hand-tracking-playground/kinematic-model-optimizer/targets/JUST_HAND/: CMakeLists.txt  OptimizerParams_SmartNotClever.hpp  OptimizerParams_SmartNotClever_wip_use_refs.hpp  defines.hpp  do_json.hpp  kinematic_troogaloo.cpp  randoviz.hpp  tiny_math.hpp
hand-tracking-playground/kinematic-model-optimizer/targets/rays/: CMakeLists.txt  OptimizerParams_SNC.hpp  defines.hpp  do_hand.cpp  do_hand_2d_shoulda_been_faster.cpp  hand_interface.hpp  randoviz.hpp  ray.cpp  test_all_at_once.cpp  tiny_math.hpp
hand-tracking-playground/mercury_train/: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py
hand-tracking-playground/mercury_train/cpp/: CMakeLists.txt
hand-tracking-playground/mercury_train/cpp/aux/: CMakeLists.txt  config_dirs.h.in  pose_csv.hpp  randoviz.hpp  u_random_distribution.cpp  u_random_distribution.h
hand-tracking-playground/mercury_train/cpp/data_generator/: CMakeLists.txt  data_generator.cpp  make_hand_proportions.cpp  make_hand_proportions.hpp  pose_diversity_hand_maker.cpp  pose_diversity_hand_maker.h  pose_diversity_test.cpp
hand-tracking-playground/mercury_train/cpp/data_generator/kine_lm/: CMakeLists.txt  lm_defines.hpp  lm_interface.hpp  lm_main.cpp
hand-tracking-playground/mercury_train/cpp/dataloader/: CMakeLists.txt  dataloader_common.hpp  dataloader_pybind.cpp  distort_image.cpp
hand-tracking-playground/mercury_train/cpp/dataset_annotator/: CMakeLists.txt  annotator_main.cpp  some_defs.hpp
hand-tracking-playground/mercury_train/cpp/dataset_playback/: CMakeLists.txt  load_basalt_calibration.cpp  sync_runner.cpp  sync_runner.hpp
hand-tracking-playground/mercury_train/cpp/pose_recorders/: CMakeLists.txt  wrist_elbow_pose.cpp
hand-tracking-playground/mercury_train/doc/: TODOS.md  design_upstreaming.md  detection_improvements.md  fix_jittery_hand_tracked_state_transitions.md  fix_wmr.md  forearm_notes.md  random_stuff.md
hand-tracking-playground/mercury_train/meta/: codespell-project.sh  format-and-spellcheck.sh  format-cmake.sh  format-project.sh  format-python.sh
hand-tracking-playground/mercury_train/py/data_generator/: blender_main.py  cursed_install_libs.py  cursed_install_libs_0.py  header.py  loadgrapher.py  loadwatcher.py  mlib.py  readcsv_fingerpose.py  readcsv_wristpose.py  sanitycheck_num_sequences.py
hand-tracking-playground/mercury_train/py/training/common/: a_geometry.py
hand-tracking-playground/mercury_train/rust/: Cargo.toml
hand-tracking-playground/mercury_train/rust/src/: main.rs
packaging-scripts/monado-data/: .gitignore  .gitmodules  CMakeLists.txt  README.md
packaging-scripts/onnxruntime/: .gitattributes  CMakeLists.txt  README.md  libonnxruntime.pc.cmake_in  make-package.sh  onnxruntime-linux-x64-1.14.1.tgz
(+87 files in other folders)
