[package]
name = "stereokit_annotator"
version = "0.1.0"
edition = "2021"


[dependencies]

stereokit = { path = "../external/stereokit-rs" }
stereokit-sys = "2.4.2"
#{ path = "../external/stereokit-sys" }

glam = {version = "0.22.0", features = ["mint", "serde", "bytemuck"]}
serde = "1.0.152"
color-eyre = "0.6.2"
mint = {version = "0.5.9", features = ["serde"]}
#nix = "0.26.2"
serde_json = "1.0.93"
crossbeam = "0.8.2"
bincode = "1.3.3"
anarchist-readable-name-generator-lib = "0.1.1"
rand = "0.8.5"
laminar = "0.5.0"
uuid = { version = "1.3.0", features = ["serde"]}
csv = "1.2"
clap = { version = "4.1.8", features = ["derive"] }
